src/testData/analysis/globalMatchData/indexes.cr
$123
$123?
$2147483647
$2147483647?
<error descr="Index doesn't fit in an Int32">$2147483648</error>
<error descr="Index doesn't fit in an Int32">$2147483648?</error>
<error descr="Index doesn't fit in an Int32">$99999999999999999999999</error>
<error descr="Index doesn't fit in an Int32">$99999999999999999999999?</error>